feat(comment) utterances comment 기능 추가

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,4 +58,12 @@ layout: default
     {% endif %}
 
     {% include comment.html %}
+    <!-- utterances comment -->
+    <script src="https://utteranc.es/client.js"
+        repo="toughhyeok/toughhyeok.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+    </script>
 </main>
